the config option to the areas dialog, where it fits better.
Feel free to revert if this is inappropriate.

-------------------------------------------------------------------------------

Mon Mar 20 21:58:50 GMT 2000
(gilbertt)

You can now iconify windows with skip_winlists set.


-------------------------------------------------------------------------------

Thu Mar 23 22:02:20 PST 2000
(Mandrake)

redoing libXinerama support.  If you use xinerama, try using the "xinerama"
command.  ALSO - you have to make sure you installed libXinerama.a in the
right place as well as Xinerama.h -- still lots more hacking to do (trying to
do a cleaner implementation than my last hack)

-------------------------------------------------------------------------------

Thu Mar 23 22:10:29 PST 2000
(Mandrake)

minor update to tell you that xinerama is not active on your box if it isn't
turned on but you have xinerama support in your server.


-------------------------------------------------------------------------------

Fri Mar 24 17:53:46 PST 2000
(Mandrake)

working on xinerama (copying home)

-------------------------------------------------------------------------------

Sat Mar 25 17:02:32 GMT 2000
(gilbertt)

This *should* prevent windows set to skip_winlists from appearing in the gnome
pager and other such gnomey things. Could someone who use the gnome-pager
applet test it for me?

This doesn't break the gnome wm-spec does it?


-------------------------------------------------------------------------------

Sat Mar 25 17:15:37 GMT 2000
(gilbertt)

I suspect this would be necessary too.


-------------------------------------------------------------------------------

Sat Mar 25 23:17:57 GMT 2000
(gilbertt)

Fixed a bug where the winops menu always appeared at the top of the screen,
if "keep menus onscreen" was selected.

At some point, the menu location calcs ended up before the XQueryPointer, so
uninitialised values were being used.
