@@ -18,7 +18,8 @@ Grouped above options under one winop "Skip Window Lists"
 64-bit fixes.
 Added "include shaded windows in focuslist" option.
 Added "include iconified windows in focuslist" option.
-Added option to wrap desktop areas
+Added option to wrap desktop areas.
+Added option to focus windows as they are cycled in the focuslist.
 
 The Road to 0.17 (post 0.16.x):
 File Manager Preview Application (you'll hopefully get a chance to see a little bit of a preview of what E's filemanager will look like)
