@@ -4423,3 +4423,13 @@ if "keep menus onscreen" was selected.
 At some point, the menu location calcs ended up before the XQueryPointer, so
 uninitialised values were being used.
 
+
+-------------------------------------------------------------------------------
+
+Sat Mar 25 23:31:02 GMT 2000
+(gilbertt)
+
+Another fine patch from Marius Eriksen <marius@linux.com>. Gives windows the
+focus when they are cycled through in the focuslist. Enabled by default, as  
+it's nice behaviour, but toggleable of course =)
+
